--- a/index.html
+++ b/index.html
@@ -445,12 +445,12 @@
             <div class="col-md-4 col-sm-6 col-xs-12 sm-margin-30px-bottom margin-40px-top">
                 <div class="team-box sm-margin-30px-bottom xs-margin-30px-bottom">
                     <div class="team-image">
-                        <img src="images/team-one.jpeg" alt="image">
+                        <img src="images/teamone.jpeg" alt="image">
                     </div>
                     <div class="team-three-tag">
                         <div class="team-three-text display-inline float-left text-left">
-                            <h6 class="text-extra-dark-gray no-margin-bottom">Karan<span class="text-blue">Kurani</span></h6>
-                            <p class="no-margin-bottom">Project Head</Head></p>
+                            <h6 class="text-extra-dark-gray no-margin-bottom">Nitin<span class="text-blue">Barsagde</span></h6>
+                            <p class="no-margin-bottom">Project Guide</Head></p>
                         </div>
                         <div class="team-three-social bg-blue" aria-hidden="true">
                         <a href="https://www.linkedin.com/in/karan-kurani/" class="linkedin-text-hvr"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
@@ -462,11 +462,11 @@
             <div class="col-md-4 col-sm-6 col-xs-12 sm-margin-30px-bottom margin-40px-top">
                 <div class="team-box sm-margin-30px-bottom xs-margin-30px-bottom">
                     <div class="team-image">
-                        <img src="images/team-one.jpeg" alt="image">
+                        <img src="images/teamone.jpeg" alt="image">
                     </div>
                     <div class="team-three-tag">
                         <div class="team-three-text display-inline float-left text-left">
-                            <h6 class="text-extra-dark-gray no-margin-bottom">Karan<span class="text-blue">Kurani</span></h6>
+                            <h6 class="text-extra-dark-gray no-margin-bottom">Tejal<span class="text-blue">Baranga</span></h6>
                             <p class="no-margin-bottom">Project Head</Head></p>
                         </div>
                         <div class="team-three-social bg-blue" aria-hidden="true">
@@ -482,8 +482,8 @@
                     </div>
                     <div class="team-three-tag">
                         <div class="team-three-text display-inline float-left text-left">
-                            <h6 class="text-extra-dark-gray no-margin-bottom">Karan<span class="text-blue">Kurani</span></h6>
-                            <p class="no-margin-bottom">Project Head</Head></p>
+                            <h6 class="text-extra-dark-gray no-margin-bottom">Sharvari<span class="text-blue">Shembherkar</span></h6>
+                            <p class="no-margin-bottom">Project Administrator</Head></p>
                         </div>
                         <div class="team-three-social bg-blue" aria-hidden="true">
                         <a href="https://www.linkedin.com/in/karan-kurani/" class="linkedin-text-hvr"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
