--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12 sm-margin-30px-bottom margin-40px-top">
                 <div class="team-box sm-margin-30px-bottom xs-margin-30px-bottom">
                     <div class="team-image">
-                        <img src="images/teamone.jpeg" alt="image">
+                        <img src="images/team-one.jpeg" alt="image">
                     </div>
                     <div class="team-three-tag">
                         <div class="team-three-text display-inline float-left text-left">
@@ -462,7 +462,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12 sm-margin-30px-bottom margin-40px-top">
                 <div class="team-box sm-margin-30px-bottom xs-margin-30px-bottom">
                     <div class="team-image">
-                        <img src="images/teamone.jpeg" alt="image">
+                        <img src="images/team-one.jpeg" alt="image">
                     </div>
                     <div class="team-three-tag">
                         <div class="team-three-text display-inline float-left text-left">
