--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                          data-paddingleft="[0,0,0,0]"
 
                          style="z-index: 8; white-space: nowrap; font-size: 20px; line-height: 22px; font-weight: 400; color: #ffffff; letter-spacing: 0px;font-family:Raleway;">
-                         <br><br><br><br><align="center"><a href="" class="btn btn-rounded btn-blue btn-hvr-white btn-large">Launch Project</a></div>
+                         <br><br><br><br><align="center"><a href="https://kuranikaran.github.io/Bioactivity/" class="btn btn-rounded btn-blue btn-hvr-white btn-large">Launch Project</a></div>
                 </li>
             </ul>
             <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
